[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "newsrank"
version = "0.1.0"
description = "Official Python client for the NewsRank API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "NewsRank AI", email = "hello@newsrank.ai" },
]
keywords = ["newsrank", "news", "api", "sdk", "client"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.24.0,<1.0.0",
]

[project.urls]
Homepage = "https://newsrank.ai"
Documentation = "https://newsrank.ai/docs"
Repository = "https://github.com/newsrank-ai/python-sdk"
Issues = "https://github.com/newsrank-ai/python-sdk/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/newsrank"]
